--- a/ConsoleApp/WebApi/WebApi.csproj
+++ b/ConsoleApp/WebApi/WebApi.csproj
@@ -15,5 +15,9 @@
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 
 </Project>
